--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>SpaceWalkers</title>
 
@@ -17,11 +17,24 @@
 <body>
 
  <!-- navigation code here -->
+  <div class="nav-wrap">
+    <nav>
+      <div class="wrap">
+      <div class="space-walkers" href=""><h1>Space Walkers</h1></div>
+      <a href=""><p>Home</p></a>
+      <a href=""><p>About Us</p></a>
+      <a href=""><p>Blog</p></a>
+      <a href=""><p>Contact</p></a>
+      <a href=""><p>Sign In</p></a>
+    </div>
+    </nav>
+  </div>
 
   <div class="container home">
 
     <header class="intro">
        <!-- image code here -->
+       <div class="header-image"><img src="img/main-header.png" alt="Header Image."></div>
 
       <h2>Lift Off</h2>
     
